# YADRO_test_task

./: .gitmodules  QAM.h  README.md  YADRO_test_task.pro  awgn.cpp  awgn.h  mainwindow.cpp  qamdemodulator.cpp  qamdemodulator.h  qammodulator.cpp  qammodulator.h
QAM_lib/inc/: QAM.h  awgn.h  qamdemodulator.h  qammodulator.h
QAM_lib/src/: QAM.cpp  awgn.cpp  qamdemodulator.cpp  qammodulator.cpp
with_GUI/: YADRO_test_task.pro  mainwindow.cpp  mainwindow.ui
without_GUI/: CMakeLists.txt  main.cpp  makefile  test_task_YADRO.pro
